--- a/app/angular.json
+++ b/app/angular.json
@@ -27,6 +27,7 @@
               "src/assets"
             ],
             "styles": [
+              "node_modules/bootstrap/dist/css/bootstrap.min.css",
               "src/styles.css"
             ],
             "scripts": []
@@ -102,11 +103,5 @@
       }
     }
   },
-<<<<<<< HEAD:app/angular.json
   "defaultProject": "app"
-=======
-  "cli": {
-    "analytics": false
-  }
->>>>>>> 0133a3098cd39a8a69286a748a308018c84ab1e8:mtvfront/angular.json
 }
