--- a/app/package.json
+++ b/app/package.json
@@ -22,6 +22,11 @@
     "@ng-bootstrap/ng-bootstrap": "^12.1.2",
     "@popperjs/core": "^2.10.2",
     "bootstrap": "^5.1.3",
+    "datatables.net": "^1.12.1",
+    "datatables.net-bs5": "^1.11.3",
+    "datatables.net-dt": "^1.12.1",
+    "jquery": "^3.6.0",
+    "ngx-pagination": "^5.1.1",
     "rxjs": "~7.5.0",
     "sweetalert2": "^11.4.24",
     "tslib": "^2.3.0",
@@ -31,7 +36,9 @@
     "@angular-devkit/build-angular": "~13.3.8",
     "@angular/cli": "~13.3.8",
     "@angular/compiler-cli": "~13.3.0",
+    "@types/datatables.net": "^1.10.23",
     "@types/jasmine": "~3.10.0",
+    "@types/jquery": "^3.5.14",
     "@types/node": "^12.11.1",
     "jasmine-core": "~4.0.0",
     "karma": "~6.3.0",
