--- a/app/package.json
+++ b/app/package.json
@@ -26,6 +26,7 @@
     "datatables.net-bs5": "^1.11.3",
     "datatables.net-dt": "^1.12.1",
     "jquery": "^3.6.0",
+    "ng2-date-picker": "^12.0.0",
     "ngx-pagination": "^5.1.1",
     "rxjs": "~7.5.0",
     "sweetalert2": "^11.4.24",
