--- a/app/package.json
+++ b/app/package.json
@@ -25,12 +25,16 @@
     "datatables.net": "^1.12.1",
     "datatables.net-bs5": "^1.11.3",
     "datatables.net-dt": "^1.12.1",
+    "exceljs": "^4.3.0",
+    "file-saver": "^2.0.5",
     "jquery": "^3.6.0",
+    "moment": "^2.29.4",
     "ng2-date-picker": "^12.0.0",
     "ngx-pagination": "^5.1.1",
     "rxjs": "~7.5.0",
     "sweetalert2": "^11.4.24",
     "tslib": "^2.3.0",
+    "xlsx": "^0.18.5",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
@@ -38,6 +42,7 @@
     "@angular/cli": "~13.3.8",
     "@angular/compiler-cli": "~13.3.0",
     "@types/datatables.net": "^1.10.23",
+    "@types/file-saver": "^2.0.5",
     "@types/jasmine": "~3.10.0",
     "@types/jquery": "^3.5.14",
     "@types/node": "^12.11.1",
