--- a/app/package.json
+++ b/app/package.json
@@ -4,6 +4,7 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
+    "local": "ng serve --port 8081 ",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
@@ -20,11 +21,8 @@
     "@angular/platform-browser-dynamic": "~13.3.0",
     "@angular/router": "~13.3.0",
     "@ng-bootstrap/ng-bootstrap": "^12.1.2",
-    "@popperjs/core": "^2.10.2",
+    "@popperjs/core": "^2.11.6",
     "bootstrap": "^5.1.3",
-    "datatables.net": "^1.12.1",
-    "datatables.net-bs5": "^1.11.3",
-    "datatables.net-dt": "^1.12.1",
     "exceljs": "^4.3.0",
     "file-saver": "^2.0.5",
     "jquery": "^3.6.0",
